# final_project_Ksenofontov_Konstantin_M25-555

./: README.md  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/cli/: interface.py
