[tool.poetry]
name = "project1-ksenofontov-konstantin-m25-555"
version = "0.1.0"
description = "Currency trading simulation platform"
authors =  ["Ksenofontov_Konstantin <ksenof.kv@gmail.com>"]
readme = "README.md"


packages = [
    { include = "valutatrade_hub" }
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
